Fixed expense and services

--- a/com/example/evans/ui/AppointmentAdapter.html
+++ b/com/example/evans/ui/AppointmentAdapter.html
@@ -105,7 +105,7 @@ var activeTableTab = "activeTableTab";
 <li>android.widget.ArrayAdapter&lt;<a href="../../../../com/example/evans/data/Appointment.html" title="class in com.example.evans.data">Appointment</a>&gt;</li>
 <li>
 <ul class="inheritance">
-<li>com.example.evans.ui.AppointmentAdapter</li>
+<li>com.example.evans.ui.Adapters.AppointmentAdapter</li>
 </ul>
 </li>
 </ul>
