--- a/com/example/evans/ui/CustomerAdapter.html
+++ b/com/example/evans/ui/CustomerAdapter.html
@@ -105,7 +105,7 @@ var activeTableTab = "activeTableTab";
 <li>android.widget.ArrayAdapter&lt;<a href="../../../../com/example/evans/data/Customer.html" title="class in com.example.evans.data">Customer</a>&gt;</li>
 <li>
 <ul class="inheritance">
-<li>com.example.evans.ui.CustomerAdapter</li>
+<li>com.example.evans.ui.Adapters.CustomerAdapter</li>
 </ul>
 </li>
 </ul>
