--- a/com/example/evans/ui/GoalViewFragment.html
+++ b/com/example/evans/ui/GoalViewFragment.html
@@ -102,7 +102,7 @@ var activeTableTab = "activeTableTab";
 <li>android.support.v4.app.Fragment</li>
 <li>
 <ul class="inheritance">
-<li>com.example.evans.ui.GoalViewFragment</li>
+<li>com.example.evans.ui.ViewFragments.GoalViewFragment</li>
 </ul>
 </li>
 </ul>
