--- a/com/example/evans/ui/SalesAdapter.html
+++ b/com/example/evans/ui/SalesAdapter.html
@@ -105,7 +105,7 @@ var activeTableTab = "activeTableTab";
 <li>android.widget.ArrayAdapter&lt;<a href="../../../../com/example/evans/data/Sale.html" title="class in com.example.evans.data">Sale</a>&gt;</li>
 <li>
 <ul class="inheritance">
-<li>com.example.evans.ui.SalesAdapter</li>
+<li>com.example.evans.ui.Adapters.SalesAdapter</li>
 </ul>
 </li>
 </ul>
