--- a/com/example/evans/ui/ServiceListFragment.html
+++ b/com/example/evans/ui/ServiceListFragment.html
@@ -102,7 +102,7 @@ var activeTableTab = "activeTableTab";
 <li>android.app.Fragment</li>
 <li>
 <ul class="inheritance">
-<li>com.example.evans.ui.ServiceListFragment</li>
+<li>com.example.evans.ui.ListFragments.ServiceListFragment</li>
 </ul>
 </li>
 </ul>
