--- a/com/example/evans/ui/TimePickerFragment.html
+++ b/com/example/evans/ui/TimePickerFragment.html
@@ -105,7 +105,7 @@ var activeTableTab = "activeTableTab";
 <li>android.app.DialogFragment</li>
 <li>
 <ul class="inheritance">
-<li>com.example.evans.ui.TimePickerFragment</li>
+<li>com.example.evans.ui.DialogFragements.TimePickerFragment</li>
 </ul>
 </li>
 </ul>
