--- a/com/example/evans/ui/CustomerViewFragment.html
+++ b/com/example/evans/ui/CustomerViewFragment.html
@@ -102,7 +102,7 @@ var activeTableTab = "activeTableTab";
 <li>android.app.Fragment</li>
 <li>
 <ul class="inheritance">
-<li>com.example.evans.ui.CustomerViewFragment</li>
+<li>com.example.evans.ui.ViewFragments.CustomerViewFragment</li>
 </ul>
 </li>
 </ul>
