--- a/com/example/evans/ui/GoalAdapter.html
+++ b/com/example/evans/ui/GoalAdapter.html
@@ -105,7 +105,7 @@ var activeTableTab = "activeTableTab";
 <li>android.widget.ArrayAdapter&lt;<a href="../../../../com/example/evans/data/Goal.html" title="class in com.example.evans.data">Goal</a>&gt;</li>
 <li>
 <ul class="inheritance">
-<li>com.example.evans.ui.GoalAdapter</li>
+<li>com.example.evans.ui.Adapters.GoalAdapter</li>
 </ul>
 </li>
 </ul>
