--- a/com/example/evans/ui/ServiceAdapter.html
+++ b/com/example/evans/ui/ServiceAdapter.html
@@ -105,7 +105,7 @@ var activeTableTab = "activeTableTab";
 <li>android.widget.ArrayAdapter&lt;<a href="../../../../com/example/evans/data/Service.html" title="class in com.example.evans.data">Service</a>&gt;</li>
 <li>
 <ul class="inheritance">
-<li>com.example.evans.ui.ServiceAdapter</li>
+<li>com.example.evans.ui.Adapters.ServiceAdapter</li>
 </ul>
 </li>
 </ul>
